--- a/tailwind/desktop_13.html
+++ b/tailwind/desktop_13.html
@@ -13,7 +13,7 @@
     <script src="/js/Chart.min.js"></script>
 </head>
 
-<body class="h-screen g-bs">
+<body class="h-screen g-b">
     <main>
         <div class="w-4/5 m-ct">
             <div class="w-7/12 m-ct bg-1f2937 rounded-cssz40 text-white pb-12">
@@ -77,84 +77,6 @@
                     <div class="rounded-lg w-24 h-24 bg_374151"></div>
                     <div class="rounded-lg w-24 h-24 bg_374151"></div>
                 </div>
-                <div class="flex w-4/5 m-ct">
-                    <div class="mr-4 fz-32 semibold ">Top 3 Favorite Game</div>
-                    <div class="ml-4 fz-20 cl_3B82F6 regular pt-3">Detail</div>
-                </div>
-                <div class="flex w-4/5 m-ct my-12">
-                    <div class="w-3/12">
-                        <div class=" rounded-cssz10 bg_374151 w-32 h-32 "></div>
-                    </div>
-                    <div class="w-9/12">
-                        <h6>Crash</h6>
-                        <p class="py-4">Watch the Multipiler go to the infinits</p>
-                        <div class="rounded-cssz16 bg_374151 w-2/5 text-center py-2 ">Wagered :<span class="cl_22C55E">
-                                64.478 </span>
-                            USD
-                        </div>
-                    </div>
-                </div>
-                <div class="flex w-4/5 m-ct my-12">
-                    <div class="w-3/12">
-                        <div class=" rounded-cssz10 bg_374151 w-32 h-32 "></div>
-                    </div>
-                    <div class="w-9/12">
-                        <h6>Classic Dice</h6>
-                        <p class="py-4">Watch the Multipiler go to the infinits</p>
-                        <div class="rounded-cssz16 bg_374151 w-2/5 text-center py-2 ">Wagered :<span class="cl_22C55E">
-                                64.478 </span>
-                            USD
-                        </div>
-                    </div>
-                </div>
-                <div class="flex w-4/5 m-ct my-12">
-                    <div class="w-3/12">
-                        <div class=" rounded-cssz10 bg_374151 w-32 h-32 "></div>
-                    </div>
-                    <div class="w-9/12">
-                        <h6>Classic Dice</h6>
-                        <p class="py-4">Watch the Multipiler go to the infinits</p>
-                        <div class="rounded-cssz16 bg_374151 w-2/5 text-center py-2 ">Wagered :<span class="cl_22C55E">
-                                64.478 </span>
-                            USD
-                        </div>
-                    </div>
-                </div>
-                <div class="flex w-4/5 m-ct">
-                    <h3 class="w-3/4">Contest</h3>
-                    <div class="flex w-1/4 justify-end">
-                        <p class="pr-4">Page</p>
-                        <img src="/images/chevron-left.png" alt="">
-                        <span class="px-4">1</span>
-                        <img src="/images/chevron-right.png" alt="">
-                    </div>
-                </div>
-                <table class="w-4/5 m-ct rounded-cssz10 bg_374151 text-center my-12">
-                    <tr class="py-12">
-                        <th>Date</th>
-                        <th>Position</th>
-                        <th>Prize</th>
-                    <tr>
-                        <td>14:15:20</td>
-                        <td>2.000.000</td>
-                        <td>2.000.000</td>
-                    </tr>
-                    <tr>
-                        <td>14:15:20</td>
-                        <td>2.000.000</td>
-                        <td>2.000.000</td>
-                    </tr>
-                    <tr>
-                        <td>14:15:20</td>
-                        <td>2.000.000</td>
-                        <td>2.000.000</td>
-                    </tr>
-                    <tr>
-                        <td>14:15:20</td>
-                        <td>2.000.000</td>
-                        <td>2.000.000</td>
-                    </tr>
-                </table>
             </div>
         </div>
     </main>
