--- a/tailwind/desktop_14.html
+++ b/tailwind/desktop_14.html
@@ -13,7 +13,7 @@
     <script src="/js/Chart.min.js"></script>
 </head>
 
-<body class="h-screen g-bs">
+<body class="h-screen g-b">
     <main>
         <div class="w-4/5 m-ct">
             <div class="w-7/12 m-ct bg-1f2937 rounded-cssz40 text-white pb-12">
@@ -41,7 +41,7 @@
                         </div>
                         <div class="rounded-lg bg_374151 w-2/3 m-ct py-2 my-6">
                             <div class="flex justify-center">
-                                <img src="/images/presentation-chart-bar.png" alt="">
+                                <img src="/images/user-circle.png" alt="">
                                 <span>Statistics</span>
                             </div>
                         </div>
@@ -67,61 +67,7 @@
                     </div>
                 </div>
                 <div class="flex w-4/5 m-ct">
-                    <div class="mr-4 fz-32 semibold ">Medal</div>
-                    <div class="ml-4 fz-20 cl_3B82F6 regular pt-3">Detail</div>
-                </div>
-                <div class="flex list-item w-4/5 m-ct py-20">
-                    <div class="rounded-lg w-24 h-24 bg_374151"></div>
-                    <div class="rounded-lg w-24 h-24 bg_374151"></div>
-                    <div class="rounded-lg w-24 h-24 bg_374151"></div>
-                    <div class="rounded-lg w-24 h-24 bg_374151"></div>
-                    <div class="rounded-lg w-24 h-24 bg_374151"></div>
-                </div>
-                <div class="flex w-4/5 m-ct">
-                    <div class="mr-4 fz-32 semibold ">Top 3 Favorite Game</div>
-                    <div class="ml-4 fz-20 cl_3B82F6 regular pt-3">Detail</div>
-                </div>
-                <div class="flex w-4/5 m-ct my-12">
-                    <div class="w-3/12">
-                        <div class=" rounded-cssz10 bg_374151 w-32 h-32 "></div>
-                    </div>
-                    <div class="w-9/12">
-                        <h6>Crash</h6>
-                        <p class="py-4">Watch the Multipiler go to the infinits</p>
-                        <div class="rounded-cssz16 bg_374151 w-2/5 text-center py-2 ">Wagered :<span class="cl_22C55E">
-                                64.478 </span>
-                            USD
-                        </div>
-                    </div>
-                </div>
-                <div class="flex w-4/5 m-ct my-12">
-                    <div class="w-3/12">
-                        <div class=" rounded-cssz10 bg_374151 w-32 h-32 "></div>
-                    </div>
-                    <div class="w-9/12">
-                        <h6>Classic Dice</h6>
-                        <p class="py-4">Watch the Multipiler go to the infinits</p>
-                        <div class="rounded-cssz16 bg_374151 w-2/5 text-center py-2 ">Wagered :<span class="cl_22C55E">
-                                64.478 </span>
-                            USD
-                        </div>
-                    </div>
-                </div>
-                <div class="flex w-4/5 m-ct my-12">
-                    <div class="w-3/12">
-                        <div class=" rounded-cssz10 bg_374151 w-32 h-32 "></div>
-                    </div>
-                    <div class="w-9/12">
-                        <h6>Classic Dice</h6>
-                        <p class="py-4">Watch the Multipiler go to the infinits</p>
-                        <div class="rounded-cssz16 bg_374151 w-2/5 text-center py-2 ">Wagered :<span class="cl_22C55E">
-                                64.478 </span>
-                            USD
-                        </div>
-                    </div>
-                </div>
-                <div class="flex w-4/5 m-ct">
-                    <h3 class="w-3/4">Contest</h3>
+                    <h3 class="w-3/4">Statistics</h3>
                     <div class="flex w-1/4 justify-end">
                         <p class="pr-4">Page</p>
                         <img src="/images/chevron-left.png" alt="">
